Fixed a bug with the footer z-index

--- a/Melodie/wwwroot/css/site.css
+++ b/Melodie/wwwroot/css/site.css
@@ -358,11 +358,14 @@ input[type=range]::-ms-fill-upper { border-radius: 10px; }
 /* Global - Music player
 -------------------------------------------------- */   
 
+body.has-music-player footer {
+    z-index: 5000;
+}
+
 #music-player {
     display: block;
     width: 100%;
     height: 145px;
-    z-index: 500;
 }
 
 /** Waveform **/
